test: PutObject object lock tests and updates, delete bucket test

--- a/tests/Dockerfile_test_bats
+++ b/tests/Dockerfile_test_bats
@@ -25,6 +25,7 @@ RUN apt-get update && \
     python3-pip \
     python3-venv \
     xxd \
+    uuid-runtime \
     ca-certificates && \
     update-ca-certificates && \
     rm -rf /var/lib/apt/lists/*
