--- a/.github/workflows/system.yml
+++ b/.github/workflows/system.yml
@@ -105,6 +105,7 @@ jobs:
           USER_AUTOGENERATION_PREFIX: github-actions-test-
           AWS_REGION: ${{ matrix.AWS_REGION }}
           COVERAGE_LOG: coverage.log
+          TEMPLATE_MATRIX_FILE: ${{ github.workspace }}/tests/templates/matrix.yaml
         run: |
           make testbin
           export AWS_ACCESS_KEY_ID=ABCDEFGHIJKLMNOPQRST
