Update example.conf for more clear S3 access and secret usage

--- a/extra/example.conf
+++ b/extra/example.conf
@@ -524,8 +524,9 @@ ROOT_SECRET_ACCESS_KEY=
 # S3 service.
 
 # When s3 backend selected, the VGW_S3_ACCESS_KEY and VGW_S3_SECRET_KEY must
-# be defined. The VGW_S3_REGION and VGW_S3_ENDPOINT are optional, and will
-# default to "us-east-1" and "https://s3.amazonaws.com" respectively.
+# be defined for an authorized access or both empty for an anonymous access.
+# The VGW_S3_REGION and VGW_S3_ENDPOINT are optional, and will default to
+# "us-east-1" and "https://s3.amazonaws.com" respectively.
 #VGW_S3_ACCESS_KEY=
 #VGW_S3_SECRET_KEY=
 #VGW_S3_REGION=
