feat: add multi-address listener for s3/admin/webui
This allows specifying the following options more than once:
port, admin-port, webui

or using a comma-separated list for the env vars:
e.g., VGW_PORT=:7070,:8080,localhost:9090

This will also expand multiple interfaces from hostnames, for example
"localhost" in this case would resolve to both IPv4 and IPv6 interfaces:
localhost has address 127.0.0.1
localhost has IPv6 address ::1

This updates the banner to reflect all of the listening interfaces/ports,
and starts the service listener on all requested interfaces/ports.

Fixes #1761

--- a/extra/example.conf
+++ b/extra/example.conf
@@ -60,9 +60,15 @@ ROOT_SECRET_ACCESS_KEY=
 # This option can use either the form <ip>:<port> which will listen only
 # on the network interface that matches the IP on the specified port, or
 # :<port> which will listen on all network interfaces on the specified port.
+# When a hostname is specified that matches multiple interfaces, such as:
+# localhost has address 127.0.0.1
+# localhost has IPv6 address ::1
+# all interfaces matching the hostname will be used.
 # The <ip> spec can either be IP dotted notation or a resolvable hostname.
 # The <port> spec can either be a numeric port or the service name typically
 # in /etc/services.
+# To specify multiple ports, use a comma-separated list
+# (e.g., VGW_PORT=:7070,:8080,localhost:9090).
 #VGW_PORT=:7070
 
 # The VGW_REGION option will specify the region that the S3 server will
@@ -81,9 +87,10 @@ ROOT_SECRET_ACCESS_KEY=
 # control of firewall restrictions to the admin endpoint. The certs for this
 # can be different certs than specified for the S3 service. The default when
 # these are not specified is to have the admin server listen on the same
-# endpoint as the S3 service.
-# When VGW_ADMIN_CERT and VGW_ADMIN_CERT_KEY are specified, the admin
-# server will use SSL.
+# endpoint as the S3 service. This can specify multiple ports with comma
+# separated list and will resolve hostnames to multiple addresses the same
+# as VGW_PORT. When VGW_ADMIN_CERT and VGW_ADMIN_CERT_KEY are specified,
+# the admin server will use SSL.
 #VGW_ADMIN_PORT=
 #VGW_ADMIN_CERT=
 #VGW_ADMIN_CERT_KEY=
@@ -210,7 +217,8 @@ ROOT_SECRET_ACCESS_KEY=
 # users, buckets and objects. The format can be either ':port' to listen on all
 # interfaces (e.g., ':7071') or 'host:port' to listen on a specific interface
 # (e.g., '127.0.0.1:7071' or 'localhost:7071'). When omitted, the Web GUI is
-# disabled.
+# disabled. This can specify multiple ports with comma separated list and will
+# resolve hostnames to multiple addresses the same as VGW_PORT.
 #VGW_WEBUI_PORT=
 
 # The VGW_WEBUI_CERT and VGW_WEBUI_KEY options specify the TLS certificate and
