feat: configuration option to disable ACLs
Closes #1847

This PR introduces a global optional gateway CLI flag `--disable-acl` (`VGW_DISABLE_ACL`) to disable ACL handling. When this flag is enabled, the gateway ignores all ACL-related headers, particularly in `CreateBucket`, `PutObject`, `CopyObject`, and `CreateMultipartUpload`.

`GetBucketAcl` behavior is unchanged simply returning the bucket ACL config.
There's no change in object ACL actions(`PutObjectACL`, `GetObjectACL`). They return a`NotImplemented` error as before.

A new custom error is added for PutBucketAcl calls when ACLs are disabled at the gateway level. Its HTTP status code and error code match AWS S3’s behavior, with only a slightly different error message.

In the access-control checker, ACL evaluation is fully bypassed. If ACLs are disabled only the bucket owner gets access to the bucket and all grantee checks are ignored.

The PR also includes minor refactoring of the S3 API server and router. The growing list of parameters passed to the router’s Init method has been consolidated into fields within the router struct, initialized during router construction. Parameters not needed by the S3 server are no longer stored in the server configuration and are instead forwarded directly to the router.

--- a/extra/example.conf
+++ b/extra/example.conf
@@ -111,6 +111,13 @@ ROOT_SECRET_ACCESS_KEY=
 # operations will be allowed.
 #VGW_READ_ONLY=false
 
+# Disable ACL support at the gateway level. All ACL headers on requests are
+# ignored, and no access control is enforced using bucket ACLs.
+# Prefer using bucket policies instead of ACLs for access management.
+# PutBucketAcl returns an immediate AccessControlListNotSupported error.
+# GetBucketAcl returns a successful response containing the default bucket ACL.
+#VGW_DISABLE_ACL=false
+
 # The VGW_VIRTUAL_DOMAIN option enables the virtual host style bucket
 # addressing. The path style addressing is the default, and remains enabled
 # even when virtual host style is enabled. The VGW_VIRTUAL_DOMAIN option
